--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 .row-content {
     margin: 0px auto;
     padding: 10px 0px 10px 0px;
-    border-bottom: 1px ridge gray;
+    /* border-bottom: 1px ridge gray; */
     min-height: auto;
 }
 .footer {
@@ -19,7 +19,7 @@
     height: 500px;
     padding: 70px 30px 70px 30px;
     margin: 0px auto;
-    background-image: url("../background.JPG");
+    background-image: url("../img/background.JPG");
     background-repeat:no-repeat;
     background-size: auto;
     background-position: center; 
